--- a/haste.html
+++ b/haste.html
@@ -138,20 +138,18 @@
             <label class="buff-toggle">
               <input type="checkbox" id="goblinRacial" class="race-checkbox buff-checkbox">
               <span class="buff-switch" aria-hidden="true"></span>
-              <img src="https://wow.zamimg.com/images/wow/icons/large/race_goblin_male.jpg" alt="" class="buff-icon" aria-hidden="true">
-              <div class="buff-info">
-                <span class="buff-name">Goblin</span>
-                <span class="buff-description">+1% passive haste</span>
-              </div>
+              <a href="https://www.wowhead.com/mop-classic/spell=69042/time-is-money" data-wowhead="spell=69042&domain=mop-classic" class="buff-tooltip-wrap">
+                <img src="https://wow.zamimg.com/images/wow/icons/large/race_goblin_male.jpg" alt="" class="buff-icon" aria-hidden="true">
+              </a>
+              <span class="buff-name">Goblin</span>
             </label>
             <label class="buff-toggle">
               <input type="checkbox" id="trollRacial" class="race-checkbox buff-checkbox">
               <span class="buff-switch" aria-hidden="true"></span>
-              <img src="https://wow.zamimg.com/images/wow/icons/large/race_troll_male.jpg" alt="" class="buff-icon" aria-hidden="true">
-              <div class="buff-info">
-                <span class="buff-name">Troll</span>
-                <span class="buff-description">Berserking racial</span>
-              </div>
+              <a href="https://www.wowhead.com/mop-classic/spell=26297/berserking" data-wowhead="spell=26297&domain=mop-classic" class="buff-tooltip-wrap">
+                <img src="https://wow.zamimg.com/images/wow/icons/large/race_troll_male.jpg" alt="" class="buff-icon" aria-hidden="true">
+              </a>
+              <span class="buff-name">Troll</span>
             </label>
           </div>
 
@@ -161,20 +159,18 @@
             <label class="buff-toggle">
               <input type="checkbox" id="powerInfusion" class="buff-checkbox">
               <span class="buff-switch" aria-hidden="true"></span>
-              <img src="https://wow.zamimg.com/images/wow/icons/large/spell_holy_powerinfusion.jpg" alt="" class="buff-icon" aria-hidden="true">
-              <div class="buff-info">
-                <span class="buff-name">Power Infusion</span>
-                <span class="buff-description">+20% spell haste</span>
-              </div>
+              <a href="https://www.wowhead.com/mop-classic/spell=10060/power-infusion" data-wowhead="spell=10060&domain=mop-classic" class="buff-tooltip-wrap">
+                <img src="https://wow.zamimg.com/images/wow/icons/large/spell_holy_powerinfusion.jpg" alt="" class="buff-icon" aria-hidden="true">
+              </a>
+              <span class="buff-name">Power Infusion</span>
             </label>
             <label class="buff-toggle" id="berserkingToggle" style="display: none;">
               <input type="checkbox" id="berserking" class="buff-checkbox">
               <span class="buff-switch" aria-hidden="true"></span>
-              <img src="https://wow.zamimg.com/images/wow/icons/large/racial_troll_berserk.jpg" alt="" class="buff-icon" aria-hidden="true">
-              <div class="buff-info">
-                <span class="buff-name">Berserking</span>
-                <span class="buff-description">+20% spell haste</span>
-              </div>
+              <a href="https://www.wowhead.com/mop-classic/spell=26297/berserking" data-wowhead="spell=26297&domain=mop-classic" class="buff-tooltip-wrap">
+                <img src="https://wow.zamimg.com/images/wow/icons/large/racial_troll_berserk.jpg" alt="" class="buff-icon" aria-hidden="true">
+              </a>
+              <span class="buff-name">Berserking</span>
             </label>
           </div>
 
@@ -184,20 +180,18 @@
             <label class="buff-toggle">
               <input type="checkbox" id="bloodlust" class="buff-checkbox">
               <span class="buff-switch" aria-hidden="true"></span>
-              <img src="https://wow.zamimg.com/images/wow/icons/large/spell_nature_bloodlust.jpg" alt="" class="buff-icon" aria-hidden="true">
-              <div class="buff-info">
-                <span class="buff-name">Bloodlust / Heroism</span>
-                <span class="buff-description">+30% spell haste</span>
-              </div>
+              <a href="https://www.wowhead.com/mop-classic/spell=2825/bloodlust" data-wowhead="spell=2825&domain=mop-classic" class="buff-tooltip-wrap">
+                <img src="https://wow.zamimg.com/images/wow/icons/large/spell_nature_bloodlust.jpg" alt="" class="buff-icon" aria-hidden="true">
+              </a>
+              <span class="buff-name">Bloodlust / Heroism</span>
             </label>
             <label class="buff-toggle">
               <input type="checkbox" id="sinisterPrimal" class="buff-checkbox">
               <span class="buff-switch" aria-hidden="true"></span>
-              <img src="https://wow.zamimg.com/images/wow/icons/large/inv_legendary_chimeraoffear.jpg" alt="" class="buff-icon" aria-hidden="true">
-              <div class="buff-info">
-                <span class="buff-name">Sinister Primal Diamond</span>
-                <span class="buff-description">+30% spell haste proc</span>
-              </div>
+              <a href="https://www.wowhead.com/mop-classic/item=95347/sinister-primal-diamond" data-wowhead="item=95347&domain=mop-classic" class="buff-tooltip-wrap">
+                <img src="https://wow.zamimg.com/images/wow/icons/large/inv_legendary_chimeraoffear.jpg" alt="" class="buff-icon" aria-hidden="true">
+              </a>
+              <span class="buff-name">Sinister Primal Diamond</span>
             </label>
           </div>
 
