--- a/haste.html
+++ b/haste.html
@@ -121,11 +121,10 @@
 		  <h3 class="control-header">Haste Rating</h3>
 		  <input
 		    type="text"
+		    inputmode="numeric"
+		    pattern="[0-9]*"
 		    id="hasteInput"
 		    class="haste-input"
-		    min="0"
-		    max="20000"
-		    step="1"
 		    placeholder="0"
 		    aria-label="Haste input value"
 		  />
