--- a/haste.html
+++ b/haste.html
@@ -209,9 +209,13 @@
           <div class="weakaura-container">
             <h3 class="weakaura-title">WeakAura</h3>
             <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="weakaura-link">
-              <img src="https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif" 
-                   alt="Shadow Priest DoT Tracker WeakAura" 
+              <img src="https://media.wago.io/screenshots/7m5gdIAts/6967395d359f134f4939ccd7.gif"
+                   alt="Shadow Priest DoT Tracker WeakAura"
                    class="weakaura-image">
+            </a>
+            <a href="https://wago.io/7m5gdIAts" target="_blank" rel="noopener" class="wago-import-btn">
+              <img src="https://media.wago.io/favicon/favicon-32x32.png" alt="" class="wago-icon">
+              Import from Wago.io
             </a>
           </div>
         </section>
