--- a/haste.html
+++ b/haste.html
@@ -30,6 +30,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
   <!-- Wowhead Tooltips -->
+  <script>window.whTooltips = { colorLinks: true, iconizeLinks: true, renameLinks: false };</script>
   <script src="https://wow.zamimg.com/widgets/power.js"></script>
 </head>
 <body>
