--- a/gus.html
+++ b/gus.html
@@ -160,6 +160,6 @@
     </div>
   </div>
   <script src="js/nav.js"></script>
-  <script src="js/script.js" defer></script>
+  <script src="js/gus.js" defer></script>
 </body>
 </html>
