--- a/gus.html
+++ b/gus.html
@@ -112,14 +112,12 @@
       <div class="boss-strip-wrapper">
         <div class="boss-strip" id="boss-strip" role="tablist" aria-label="Boss selection"></div>
       </div>
-      <div class="context-breadcrumb" id="context-breadcrumb"></div>
     </div>
   </div>
   
   <div class="unified-container">
     <div class="main-grid">
       <main class="content-area">
-        <h1>SHADOW PRIEST TOP 100</h1>
         <div class="last-updated" id="last-updated" role="status" aria-live="polite">
           Loading last updated…
         </div>
@@ -131,16 +129,22 @@
               <circle cx="11" cy="11" r="8"/>
               <line x1="21" y1="21" x2="16.65" y2="16.65"/>
             </svg>
-            <input type="text" id="search-input" class="toolbar-search-input" placeholder="Search player or server..." autocomplete="off" />
+            <input type="text" id="search-input" class="toolbar-search-input" placeholder="Search player..." autocomplete="off" />
             <button class="toolbar-search-clear" id="search-clear" aria-label="Clear search" style="display:none;">✕</button>
           </div>
           <div class="toolbar-right">
             <div class="toolbar-result-count" id="toolbar-result-count"></div>
+            <select id="region-filter" class="toolbar-sort" aria-label="Filter by region">
+              <option value="">Region: All</option>
+            </select>
+            <select id="server-filter" class="toolbar-sort" aria-label="Filter by server">
+              <option value="">Server: All</option>
+            </select>
             <select id="sort-select" class="toolbar-sort" aria-label="Sort rankings">
-              <option value="dps">Sort: DPS</option>
+              <option value="dps-desc">Sort: DPS (Highest)</option>
+              <option value="dps-asc">Sort: DPS (Lowest)</option>
               <option value="ilvl">Sort: Item Level</option>
               <option value="duration">Sort: Duration</option>
-              <option value="name">Sort: Name</option>
             </select>
           </div>
         </div>
@@ -156,6 +160,7 @@
             Select a boss to view talent data
           </div>
         </div>
+        <div class="sidebar-parsing-rules" id="sidebar-parsing-rules"></div>
       </aside>
     </div>
   </div>
