--- a/gus.html
+++ b/gus.html
@@ -118,6 +118,7 @@
   <div class="unified-container">
     <div class="main-grid">
       <main class="content-area">
+        <h1>SHADOW PRIEST TOP 100</h1>
         <div class="last-updated" id="last-updated" role="status" aria-live="polite">
           Loading last updated…
         </div>
@@ -136,9 +137,6 @@
             <div class="toolbar-result-count" id="toolbar-result-count"></div>
             <select id="region-filter" class="toolbar-sort" aria-label="Filter by region">
               <option value="">Region: All</option>
-            </select>
-            <select id="server-filter" class="toolbar-sort" aria-label="Filter by server">
-              <option value="">Server: All</option>
             </select>
             <select id="sort-select" class="toolbar-sort" aria-label="Sort rankings">
               <option value="dps-desc">Sort: DPS (Highest)</option>
