--- a/gus.html
+++ b/gus.html
@@ -163,6 +163,9 @@
     </div>
   </div>
   <script src="js/nav.js"></script>
+  <script src="js/tiers.js" defer></script>
+  <script src="js/talents.js" defer></script>
+  <script src="js/parsing.js" defer></script>
   <script src="js/gus.js" defer></script>
 </body>
 </html>
