--- a/gus.html
+++ b/gus.html
@@ -118,6 +118,7 @@
   <div class="unified-container">
     <div class="main-grid">
       <main class="content-area">
+        <h1>SHADOW PRIEST TOP 100</h1>
         <div class="sidebar-parsing-rules" id="sidebar-parsing-rules"></div>
         <div class="last-updated" id="last-updated" role="status" aria-live="polite">
           Loading last updated…
