--- a/rankings.html
+++ b/rankings.html
@@ -17,7 +17,7 @@
   <link rel="canonical" href="https://skimmynz.com/rankings">
 
   <link rel="stylesheet" href="css/base.css" />
-  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/gus.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -35,7 +35,7 @@
         ☰
       </button>
       
-<ul class="nav-links" id="navLinks">
+      <ul class="nav-links" id="navLinks">
         <li>
           <a href="/">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -101,19 +101,52 @@
       </ul>
     </div>
   </nav>
+
+  <!-- ═══ Context Bar (replaces left sidebar) ═══ -->
+  <div class="context-bar" id="context-bar">
+    <div class="context-bar-inner">
+      <div class="context-selectors">
+        <div class="tier-toggle" id="tier-toggle" role="radiogroup" aria-label="Tier selection"></div>
+        <div class="raid-pills" id="raid-pills" role="tablist" aria-label="Raid selection"></div>
+      </div>
+      <div class="boss-strip-wrapper">
+        <div class="boss-strip" id="boss-strip" role="tablist" aria-label="Boss selection"></div>
+      </div>
+    </div>
+  </div>
   
   <div class="unified-container">
     <div class="main-grid">
-      <aside class="sidebar">
-        <nav id="raid-menu" aria-label="Raid selection"></nav>
-        <div id="boss-buttons" role="group" aria-label="Bosses"></div>
-      </aside>
-      
       <main class="content-area">
         <h1>SHADOW PRIEST TOP 100</h1>
-        <div class="last-updated" id="last-updated" role="status" aria-live="polite">
-          Loading last updated…
+        <div class="sidebar-parsing-rules" id="sidebar-parsing-rules"></div>
+        <!-- ═══ Toolbar (search + sort) ═══ -->
+        <div class="toolbar" id="toolbar">
+          <div class="toolbar-search">
+            <svg class="toolbar-search-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="11" cy="11" r="8"/>
+              <line x1="21" y1="21" x2="16.65" y2="16.65"/>
+            </svg>
+            <input type="text" id="search-input" class="toolbar-search-input" placeholder="Search player..." autocomplete="off" />
+            <button class="toolbar-search-clear" id="search-clear" aria-label="Clear search" style="display:none;">✕</button>
+          </div>
+          <div class="last-updated" id="last-updated" role="status" aria-live="polite">
+            Loading last updated…
+          </div>
+          <div class="toolbar-right">
+            <div class="toolbar-result-count" id="toolbar-result-count"></div>
+            <select id="region-filter" class="toolbar-sort" aria-label="Filter by region">
+              <option value="">Region: All</option>
+            </select>
+            <select id="sort-select" class="toolbar-sort" aria-label="Sort rankings">
+              <option value="dps-desc">Sort: DPS (Highest)</option>
+              <option value="dps-asc">Sort: DPS (Lowest)</option>
+              <option value="ilvl">Sort: Item Level</option>
+              <option value="duration">Sort: Duration</option>
+            </select>
+          </div>
         </div>
+
         <section id="rankings">
         </section>
       </main>
@@ -129,6 +162,9 @@
     </div>
   </div>
   <script src="js/nav.js"></script>
-  <script src="js/script.js" defer></script>
+  <script src="js/tiers.js" defer></script>
+  <script src="js/talents.js" defer></script>
+  <script src="js/parsing.js" defer></script>
+  <script src="js/gus.js" defer></script>
 </body>
 </html>
