--- a/addons.html
+++ b/addons.html
@@ -106,9 +106,7 @@
           Resolution: 1920 x 1080 • UI Scale: 65%
         </div>
 
-      <div class="ui-map-wrapper" id="uiMapWrapper">
-        <img src="img/ui.jpg" alt="Shadow Priest UI" id="uiImage">
-      </div>
+      <div class="ui-map-wrapper" id="uiMapWrapper"></div>
 
       <!-- Addons Section -->
       <div class="section-header">
