--- a/rankings.html
+++ b/rankings.html
@@ -17,7 +17,7 @@
   <link rel="canonical" href="https://skimmynz.com/rankings">
 
   <link rel="stylesheet" href="css/base.css" />
-  <link rel="stylesheet" href="css/gus.css" />
+  <link rel="stylesheet" href="css/rankings.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -165,6 +165,6 @@
   <script src="js/tiers.js" defer></script>
   <script src="js/talents.js" defer></script>
   <script src="js/parsing.js" defer></script>
-  <script src="js/gus.js" defer></script>
+  <script src="js/rankings.js" defer></script>
 </body>
 </html>
