--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
   <link rel="canonical" href="https://skimmynz.com/">
 
+  <!-- Preload LCP image -->
+  <link rel="preload" as="image" href="/img/hero-bg.webp" fetchpriority="high">
+
   <!-- Styles -->
   <link rel="stylesheet" href="css/base.css" />
   <link rel="stylesheet" href="css/home.css" />
@@ -203,7 +206,7 @@
     </div>
   </footer>
 
-  <script src="js/home.js"></script>
-  <script src="js/nav.js"></script>
+  <script defer src="js/home.js"></script>
+  <script defer src="js/nav.js"></script>
 </body>
 </html>
