--- a/guide.html
+++ b/guide.html
@@ -37,7 +37,7 @@
        ════════════════════════════════════════════════════ -->
   <nav class="top-nav">
     <div class="nav-container">
-      <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">☰</button>
+      <button class="mobile-menu-toggle" id="mobileMenuToggle" aria-label="Toggle menu">&#9776;</button>
       <ul class="nav-links" id="navLinks">
         <li>
           <a href="/">
@@ -86,18 +86,6 @@
   </nav>
 
   <!-- ════════════════════════════════════════════════════
-       Hero
-       ════════════════════════════════════════════════════ -->
-  <header class="guide-hero">
-    <h1 class="guide-hero-title">Shadow Priest PVE Guide</h1>
-    <p class="guide-hero-subtitle">Mists of Pandaria Classic &mdash; TL;DW text recap</p>
-    <a href="https://www.youtube.com/watch?v=LH5aODSFQ1o" target="_blank" rel="noopener" class="guide-hero-link">
-      <svg viewBox="0 0 24 24" fill="currentColor"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
-      Watch the full video on YouTube
-    </a>
-  </header>
-
-  <!-- ════════════════════════════════════════════════════
        Video Embed
        ════════════════════════════════════════════════════ -->
   <div class="guide-video">
@@ -141,17 +129,36 @@
 
     <div class="guide-card">
       <h3>Talents <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=50" target="_blank" rel="noopener">0:50</a></h3>
-      <p class="placeholder"><!-- TODO: fill in talent overview --></p>
+      <p>MoP replaced the old 40-point talent trees with six rows you can swap per boss. Here's the breakdown:</p>
+      <ul>
+        <li><strong>Row 1 (15):</strong> Pure utility &mdash; doesn't affect DPS. On fights like Zorlok, untalent it entirely so you can't grief the raid if mind controlled.</li>
+        <li><strong>Row 2 (30):</strong> <a href="https://www.wowhead.com/mop-classic/spell=121536">Angelic Feather</a> &mdash; always. Non-negotiable. See below.</li>
+        <li><strong>Row 3 (45):</strong> <a href="https://www.wowhead.com/mop-classic/spell=139139">Solace &amp; Insanity</a> is the default (best single-target). <a href="https://www.wowhead.com/mop-classic/spell=123040">Mindbender</a> for cleave fights where you stand still (e.g. Stone Guard). <a href="https://www.wowhead.com/mop-classic/spell=109186">From Darkness, Comes Light</a> for movement-heavy encounters &mdash; gives you something to cast on the move.</li>
+        <li><strong>Row 4 (60):</strong> <a href="https://www.wowhead.com/mop-classic/spell=114214">Angelic Bulwark</a> is the default &mdash; a substantial HP buffer when you get low. Switch to <a href="https://www.wowhead.com/mop-classic/spell=19236">Desperate Prayer</a> on Amber-Shaper (Bulwark's shield scales with the construct and you'll get a 2M shield &mdash; don't be that guy).</li>
+        <li><strong>Row 5 (75):</strong> <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a> if you can get at least 50% uptime (fights with snipeable adds = more <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a> + flat bonus damage). Otherwise <a href="https://www.wowhead.com/mop-classic/spell=10060">Power Infusion</a> for flat single-target fights (Feng, Blade Lord) &mdash; line one up with your opener, one with execute phase. <a href="https://www.wowhead.com/mop-classic/spell=124430">Divine Insight</a> is behind this phase.</li>
+        <li><strong>Row 6 (90):</strong> See Level 90 Talents below.</li>
+      </ul>
     </div>
 
     <div class="guide-card" id="angelic-feather">
       <h3>Why Angelic Feather? <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=292" target="_blank" rel="noopener">4:52</a></h3>
-      <p class="placeholder"><!-- TODO: fill in Angelic Feather explanation --></p>
+      <p>The MoP version of <a href="https://www.wowhead.com/mop-classic/spell=121536">Angelic Feather</a> is dramatically better than retail:</p>
+      <ul>
+        <li><strong>80% movement speed</strong> (double retail)</li>
+        <li><strong>6 second duration</strong> (1 second longer)</li>
+        <li><strong>10 second cooldown</strong> (half retail)</li>
+      </ul>
+      <p>It's hard to not have it available. You go from being a wheelchair class to having near-permanent sprint uptime. Macro it to <code>@player</code> to skip the targeting reticle and cast it instantly at your feet.</p>
+      <p><a href="https://www.wowhead.com/mop-classic/spell=64129">Body and Soul</a> is worse because a healing priest will be shielding you anyway, and if the shield is on cooldown when you actually need the speed, you're stuck.</p>
     </div>
 
     <div class="guide-card" id="level-90-talents">
       <h3>Level 90 Talents <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=355" target="_blank" rel="noopener">5:55</a></h3>
-      <p class="placeholder"><!-- TODO: fill in level 90 talent choices --></p>
+      <ul>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=120644">Halo</a></strong> &mdash; default choice. Must be at least 20 yards from the target for full damage. Use a WeakAura or addon to track your distance.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=122128">Divine Star</a></strong> &mdash; take this if your strategy forces you to stack in melee, or when farming celestial dungeons.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=127632">Cascade</a></strong> &mdash; only for Elegon and Galon at this point.</li>
+      </ul>
     </div>
   </section>
 
@@ -165,32 +172,46 @@
 
     <div class="guide-card">
       <h3>Stats <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=395" target="_blank" rel="noopener">6:35</a></h3>
-      <p class="placeholder"><!-- TODO: fill in stat priority --></p>
+      <p>Item level wins 9 times out of 10 &mdash; the raw stamina, intellect, and secondary stats across 18 slots add up to more than chasing a perfect stat spread. But never at the expense of hitting these key thresholds:</p>
+      <ol>
+        <li><strong>Hit cap &mdash; 15%.</strong> Hit rating, Spirit (converts passively), and Expertise all count toward this. Once you're capped, reforge/regem away from it.</li>
+        <li><strong>Haste &mdash; to 8085 rating.</strong> The most important breakpoint for our DOTs. See below.</li>
+        <li><strong>Crit &ge; Mastery.</strong> Crit is slightly ahead in T14. This relationship ping-pongs as new tier sets and items become available.</li>
+      </ol>
     </div>
 
     <div class="guide-card" id="dots">
       <h3>How our DOTs work <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=474" target="_blank" rel="noopener">7:54</a></h3>
-      <p class="placeholder"><!-- TODO: fill in DOT mechanics (snapshotting, pandemic, etc.) --></p>
+      <p>Our three main DOTs &mdash; <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a>, <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a>, and <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> &mdash; all have fixed durations. Within that window, they tick a set number of times.</p>
+      <p>More haste does three things: reduces cast times, reduces your GCD, and <strong>adds extra ticks</strong> within the same duration. For example, <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> might do 8 ticks instead of 6 in the same 6-second window. That's free damage.</p>
     </div>
 
     <div class="guide-card" id="haste-breakpoints">
       <h3>Haste Breakpoints <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=508" target="_blank" rel="noopener">8:28</a></h3>
-      <p class="placeholder"><!-- TODO: fill in haste breakpoints table/info, link to /haste calculator --></p>
+      <p>You get 5% haste baseline from <a href="https://www.wowhead.com/mop-classic/spell=15473">Shadowform</a>. The first breakpoint is trivial to hit.</p>
+      <p>The one that matters is <strong>8085 haste rating</strong> &mdash; this gives 2 extra ticks of <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and 2 extra ticks of <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a>. Building and spending orbs as often as possible is the name of the game, so those extra DP ticks are a huge deal.</p>
+      <p>Later breakpoints: 30% is achievable with raid gear. 14,000 and 18,000 rating become reachable in Throne of Thunder and Siege of Orgrimmar. Use the <a href="/haste">Haste Calculator</a> to plan your gearing.</p>
     </div>
 
     <div class="guide-card" id="t14-breakpoints">
       <h3>T14 4pc Haste Breakpoints <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=575" target="_blank" rel="noopener">9:35</a></h3>
-      <p class="placeholder"><!-- TODO: fill in T14 4pc breakpoint info --></p>
+      <p>The <a href="https://www.wowhead.com/mop-classic/spell=138156">Tier 14 4-piece bonus</a> extends both <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> by 3 seconds, giving you a free extra tick by default. This changes the breakpoint values &mdash; VT adopts the same breakpoint formula as SWP.</p>
+      <p>8085 remains the key target. Sim your character to check whether chasing the next breakpoint beyond that is worth the intellect you'd sacrifice.</p>
     </div>
 
     <div class="guide-card" id="gems">
       <h3>Gems <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=605" target="_blank" rel="noopener">10:05</a></h3>
-      <p class="placeholder"><!-- TODO: fill in gem recommendations --></p>
+      <ul>
+        <li><strong>Early gearing:</strong> Quick Sun's Radiance (yellow) and Energized Wild Jade (blue) to reach 8085 as fast as possible. Reforging and enchants help too.</li>
+        <li><strong>Once 8085 is hit naturally:</strong> Swap to Reckless Vermilion Onyx and Purified Imperial Amethyst for a better intellect/secondary balance.</li>
+      </ul>
+      <p>If simming shows that chasing the next breakpoint costs too much intellect, stop stacking haste and go for the balanced gems.</p>
     </div>
 
     <div class="guide-card" id="stat-scaling">
       <h3>Stat Scaling <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=643" target="_blank" rel="noopener">10:43</a></h3>
-      <p class="placeholder"><!-- TODO: fill in stat scaling explanation --></p>
+      <p>Comparing Phase 1 to Phase 5 gear: weapons get double the spell power, double the stamina, massive intellect gains, and socket bonuses. Rings see similar jumps. Multiply that across 18 slots and scaling classes like Shadow Priest and Fire Mage become monsters by the end of the expansion.</p>
+      <p>The tradeoff: you may feel behind early on, but as you hit higher breakpoints and GCD cap later, it pays off.</p>
     </div>
   </section>
 
@@ -204,17 +225,40 @@
 
     <div class="guide-card">
       <h3>Opener <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=694" target="_blank" rel="noopener">11:34</a></h3>
-      <p class="placeholder"><!-- TODO: fill in opener sequence --></p>
+      <ol>
+        <li>Stand at least <strong>28 yards</strong> from the boss.</li>
+        <li>At <strong>2.5s</strong> on the pull timer, cast <a href="https://www.wowhead.com/mop-classic/spell=120644">Halo</a> &mdash; the travel time makes it land on zero.</li>
+        <li>At <strong>1s</strong>, use <a href="https://www.wowhead.com/mop-classic/spell=105702">Potion of the Jade Serpent</a>.</li>
+        <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a> &mdash; this procs passive trinkets and <a href="https://www.wowhead.com/mop-classic/spell=104993">Jade Spirit</a>.</li>
+        <li>Pop cooldowns: Berserking / <a href="https://www.wowhead.com/mop-classic/spell=10060">Power Infusion</a> + Engineering gloves.</li>
+        <li>Apply <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> &rarr; <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> &rarr; <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a>. Your first round of DOTs snapshots all your active buffs.</li>
+        <li><a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a> on cooldown (always building orbs).</li>
+        <li>Spam <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a>.</li>
+      </ol>
+      <p><a href="https://www.wowhead.com/mop-classic/spell=34433">Shadowfiend</a> in MoP dynamically updates with <a href="https://www.wowhead.com/mop-classic/spell=2825">Bloodlust</a> after spawning &mdash; no more begging for lust before you cast it.</p>
     </div>
 
     <div class="guide-card" id="spell-priority">
       <h3>Spell Priority <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=803" target="_blank" rel="noopener">13:23</a></h3>
-      <p class="placeholder"><!-- TODO: fill in spell priority list --></p>
+      <p>Everything revolves around building and spending <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a>:</p>
+      <ol>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a></strong> &mdash; only at 3 orbs.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a></strong> &mdash; on cooldown, always.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a></strong> &mdash; in execute or to snipe adds for orbs + <a href="https://www.wowhead.com/mop-classic/spell=109142">Twist of Fate</a>.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a></strong> &mdash; channel as many as possible after DP.</li>
+        <li><strong>DOT refresh</strong> &mdash; keep <a href="https://www.wowhead.com/mop-classic/spell=589">SWP</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">VT</a> rolling. Ensure at least 8 seconds remain before casting DP so you don't need to refresh mid-insanity.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=109186">From Darkness, Comes Light</a> procs</strong> &mdash; use on the move.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=120644">Halo</a></strong> &mdash; if 20+ yards away.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=15407">Mind Flay</a></strong> &mdash; filler. Still packs a punch, but interrupt it for anything above.</li>
+      </ol>
+      <p><strong>Plan ahead:</strong> the entire priority revolves around not bottlenecking yourself. If your dots fall off while you're channelling insanity, you're trolling your own damage.</p>
     </div>
 
     <div class="guide-card" id="mfi">
       <h3>Mind Flay: Insanity <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=911" target="_blank" rel="noopener">15:11</a></h3>
-      <p class="placeholder"><!-- TODO: fill in MFI usage and tips --></p>
+      <p><a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> buffs <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> by 33% per orb spent. At 3 orbs (which is always), that's <strong>100% bonus damage</strong> on every MFI channel.</p>
+      <p><strong>Snapshot trick:</strong> recast MFI just before Devouring Plague expires. The channel will snapshot and retain the full 100% buff for its entire duration, even after DP falls off. This is a meaningful DPS gain.</p>
+      <p>To compare yourself to other Shadow Priests: look at their total MFI damage relative to how many Devouring Plagues they cast. That ratio tells you how well they're converting orbs into insanity damage.</p>
     </div>
   </section>
 
@@ -228,12 +272,21 @@
 
     <div class="guide-card">
       <h3>WeakAuras &amp; Addons <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=961" target="_blank" rel="noopener">16:01</a></h3>
-      <p>See the full setup on the <a href="/addons">Addons &amp; WeakAuras</a> page.</p>
+      <p>See the full setup, profiles, and previews on the <a href="/addons">Addons &amp; WeakAuras</a> page.</p>
     </div>
 
     <div class="guide-card" id="macros">
       <h3>Macros <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=995" target="_blank" rel="noopener">16:35</a></h3>
-      <p class="placeholder"><!-- TODO: fill in macro examples --></p>
+      <p>Macros combine multiple button presses into one and smooth out the gameplay. Key macros to set up:</p>
+      <ul>
+        <li><strong>Cooldowns button:</strong> Berserking + <a href="https://www.wowhead.com/mop-classic/spell=10060">Power Infusion</a> (if talented) + Engineering gloves (<code>/use 10</code>) + trinkets (<code>/use 13</code>, <code>/use 14</code>) all in one press. Works great with double passive trinkets since there's no cooldown conflict.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=34433">Shadowfiend</a>:</strong> Casts Shadowfiend and commands the pet to attack. Also includes auto-target logic (see below).</li>
+        <li><strong>Auto-target enemy:</strong> Add to all damage spells (<a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a>, DOTs, <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>). If your target is dead or doesn't exist, the macro finds a new one. Invaluable for sniping adds.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>:</strong> Updates its tooltip based on your Level 90 talent, so you never have to drag spells from the talent pane onto your bars.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=47585">Dispersion</a> toggle:</strong> First press activates, second press cancels &mdash; like a paladin bubble.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=121536">Angelic Feather</a> at feet:</strong> Use <code>@player</code> to remove the targeting reticle entirely. Instant 80% speed boost whenever you need it.</li>
+        <li><strong>Talent switching:</strong> A <code>/run</code> command can swap talents without a tome. Put different talent configs on a second action bar row and toggle between bosses or trash with zero downtime.</li>
+      </ul>
     </div>
   </section>
 
