--- a/guide.html
+++ b/guide.html
@@ -155,7 +155,7 @@
     <div class="guide-card" id="level-90-talents">
       <h3>Level 90 Talents <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=355" target="_blank" rel="noopener">5:55</a></h3>
       <ul>
-        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=120644">Halo</a></strong> &mdash; default choice. Must be at least 20 yards from the target for full damage. Use a WeakAura or addon to track your distance.</li>
+        <li><strong><a href="https://www.wowhead.com/mop-classic/spell=120644">Halo</a></strong> &mdash; default choice. Must be at least 20 yards from the target for full damage. Use <a href="https://wago.io/ri2lfOS8b" target="_blank" rel="noopener">this WeakAura</a> to track your distance.</li>
         <li><strong><a href="https://www.wowhead.com/mop-classic/spell=122128">Divine Star</a></strong> &mdash; take this if your strategy forces you to stack in melee, or when farming celestial dungeons.</li>
         <li><strong><a href="https://www.wowhead.com/mop-classic/spell=127632">Cascade</a></strong> &mdash; only for Elegon and Galon at this point.</li>
       </ul>
