--- a/guide.html
+++ b/guide.html
@@ -202,8 +202,8 @@
     <div class="guide-card" id="gems">
       <h3>Gems <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=605" target="_blank" rel="noopener">10:05</a></h3>
       <ul>
-        <li><strong>Early gearing:</strong> Quick Sun's Radiance (yellow) and Energized Wild Jade (blue) to reach 8085 as fast as possible. Reforging and enchants help too.</li>
-        <li><strong>Once 8085 is hit naturally:</strong> Swap to Reckless Vermilion Onyx and Purified Imperial Amethyst for a better intellect/secondary balance.</li>
+        <li><strong>Early gearing:</strong> <a href="https://www.wowhead.com/mop-classic/item=76699">Quick Sun's Radiance</a> (yellow) and <a href="https://www.wowhead.com/mop-classic/item=76651">Energized Wild Jade</a> (blue) to reach 8085 as fast as possible. Reforging and enchants help too.</li>
+        <li><strong>Once 8085 is hit naturally:</strong> Swap to <a href="https://www.wowhead.com/mop-classic/item=76668">Reckless Vermilion Onyx</a> and <a href="https://www.wowhead.com/mop-classic/item=76686">Purified Imperial Amethyst</a> for a better intellect/secondary balance.</li>
       </ul>
       <p>If simming shows that chasing the next breakpoint costs too much intellect, stop stacking haste and go for the balanced gems.</p>
     </div>
@@ -230,7 +230,7 @@
         <li>At <strong>2.5s</strong> on the pull timer, cast <a href="https://www.wowhead.com/mop-classic/spell=120644">Halo</a> &mdash; the travel time makes it land on zero.</li>
         <li>At <strong>1s</strong>, use <a href="https://www.wowhead.com/mop-classic/spell=105702">Potion of the Jade Serpent</a>.</li>
         <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a> &mdash; this procs passive trinkets and <a href="https://www.wowhead.com/mop-classic/spell=104993">Jade Spirit</a>.</li>
-        <li>Pop cooldowns: Berserking / <a href="https://www.wowhead.com/mop-classic/spell=10060">Power Infusion</a> + Engineering gloves.</li>
+        <li>Pop cooldowns: <a href="https://www.wowhead.com/mop-classic/spell=26297">Berserking</a> / <a href="https://www.wowhead.com/mop-classic/spell=10060">Power Infusion</a> + Engineering gloves.</li>
         <li>Apply <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> &rarr; <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> &rarr; <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a>. Your first round of DOTs snapshots all your active buffs.</li>
         <li><a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a> on cooldown (always building orbs).</li>
         <li>Spam <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a>.</li>
@@ -279,7 +279,7 @@
       <h3>Macros <a class="timestamp" href="https://www.youtube.com/watch?v=LH5aODSFQ1o&t=995" target="_blank" rel="noopener">16:35</a></h3>
       <p>Macros combine multiple button presses into one and smooth out the gameplay. Key macros to set up:</p>
       <ul>
-        <li><strong>Cooldowns button:</strong> Berserking + <a href="https://www.wowhead.com/mop-classic/spell=10060">Power Infusion</a> (if talented) + Engineering gloves (<code>/use 10</code>) + trinkets (<code>/use 13</code>, <code>/use 14</code>) all in one press. Works great with double passive trinkets since there's no cooldown conflict.</li>
+        <li><strong>Cooldowns button:</strong> <a href="https://www.wowhead.com/mop-classic/spell=26297">Berserking</a> + <a href="https://www.wowhead.com/mop-classic/spell=10060">Power Infusion</a> (if talented) + Engineering gloves (<code>/use 10</code>) + trinkets (<code>/use 13</code>, <code>/use 14</code>) all in one press. Works great with double passive trinkets since there's no cooldown conflict.</li>
         <li><strong><a href="https://www.wowhead.com/mop-classic/spell=34433">Shadowfiend</a>:</strong> Casts Shadowfiend and commands the pet to attack. Also includes auto-target logic (see below).</li>
         <li><strong>Auto-target enemy:</strong> Add to all damage spells (<a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a>, DOTs, <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>). If your target is dead or doesn't exist, the macro finds a new one. Invaluable for sniping adds.</li>
         <li><strong><a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a>:</strong> Updates its tooltip based on your Level 90 talent, so you never have to drag spells from the talent pane onto your bars.</li>
