--- a/placehol.html
+++ b/placehol.html
@@ -296,7 +296,7 @@
 /petattack</code></pre>
 
       <h4><a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a></h4>
-      <p>Auto-targets a living enemy. Updates its tooltip based on your Level 90 talent, so you never have to drag spells from the talent pane onto your bars.</p>
+      <p>Auto-targets a living enemy if your current target is dead or doesn't exist. For example, on Heroic Lei Shen when Ball Lightnings spawn you <a href="https://www.wowhead.com/mop-classic/spell=48045">Mind Sear</a> the pack then spam this macro &mdash; it automatically retargets a living add and fires <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> to generate orbs and do big damage. Far quicker than tab-targeting or clicking manually.</p>
       <pre><code>#showtooltip Shadow Word: Death
 /cleartarget [dead][noharm]
 /targetenemy [noexists]
