--- a/rankings.html
+++ b/rankings.html
@@ -138,12 +138,12 @@
             <select id="region-filter" class="toolbar-sort" aria-label="Filter by region">
               <option value="">Region: All</option>
             </select>
-            <select id="sort-select" class="toolbar-sort" aria-label="Sort rankings">
-              <option value="dps-desc">Sort: DPS (Highest)</option>
-              <option value="dps-asc">Sort: DPS (Lowest)</option>
-              <option value="ilvl">Sort: Item Level</option>
-              <option value="duration">Sort: Duration</option>
-            </select>
+            <div class="sort-toggles" id="sort-toggles">
+              <button class="sort-btn active" data-sort="dps" aria-label="Sort by DPS">DPS <span class="sort-arrow">&#9660;</span></button>
+              <button class="sort-btn" data-sort="ilvl" aria-label="Sort by Item Level">iLvl <span class="sort-arrow">&#9660;</span></button>
+              <button class="sort-btn" data-sort="duration" aria-label="Sort by Duration">Duration <span class="sort-arrow">&#9650;</span></button>
+              <button class="sort-btn" data-sort="date" aria-label="Sort by Date">Date <span class="sort-arrow">&#9660;</span></button>
+            </div>
           </div>
         </div>
 
