--- a/rankings.html
+++ b/rankings.html
@@ -102,21 +102,9 @@
     </div>
   </nav>
 
-  <!-- ═══ Context Bar (replaces left sidebar) ═══ -->
-  <div class="context-bar" id="context-bar">
-    <div class="context-bar-inner">
-      <div class="context-selectors">
-        <div class="tier-toggle" id="tier-toggle" role="radiogroup" aria-label="Tier selection"></div>
-        <div class="raid-pills" id="raid-pills" role="tablist" aria-label="Raid selection"></div>
-      </div>
-      <div class="boss-strip-wrapper">
-        <div class="boss-strip" id="boss-strip" role="tablist" aria-label="Boss selection"></div>
-      </div>
-    </div>
-  </div>
-  
   <div class="unified-container">
     <div class="main-grid">
+      <nav class="raid-nav" id="raid-nav" aria-label="Raid and boss selection"></nav>
       <main class="content-area">
         <h1>SHADOW PRIEST TOP 100</h1>
         <div class="sidebar-parsing-rules" id="sidebar-parsing-rules"></div>
