--- a/rankings.html
+++ b/rankings.html
@@ -146,6 +146,10 @@
             Select a boss to view talent data
           </div>
         </div>
+        <div class="trinket-summary-section">
+          <h3>Popular Trinkets</h3>
+          <div class="trinket-summary" id="trinket-summary"></div>
+        </div>
       </aside>
     </div>
   </div>
