--- a/haste.html
+++ b/haste.html
@@ -9,7 +9,7 @@
 
   <link rel="canonical" href="https://skimmynz.com/haste">
   
-  <title>Shadow Priest Haste Calculator | MoP Classic | skimmynz</title>
+  <title>Haste Calculator | skimmynz</title>
 	
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5698535707794768"
      crossorigin="anonymous"></script>
