--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Shadow Priest Hub for MoP Classic — rankings, haste calculator, boss tips, addons & WeakAuras by skimmynz.">
   <meta name="keywords" content="shadow priest, MoP Classic, guide, rankings, haste calculator, World of Warcraft, skimmynz">
 
-  <title>Shadow Priest Sanctuary | skimmynz</title>
+  <title>skimmynz | Shadow Priest MoP Classic</title>
 
   <link rel="icon" type="image/png" sizes="32x32" href="/32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/16.png">
@@ -98,7 +98,7 @@
     <div class="hero-glow hero-glow--2" aria-hidden="true"></div>
 
     <div class="hero-content">
-      <h1 class="hero-title">Shadow Priest Sanctuary</h1>
+      <h1 class="hero-title">Shadow Priest</h1>
       <p class="hero-subtitle">Mists of Pandaria Classic</p>
       <p class="hero-tagline">Talents, tips & tools for Heroic Raiding</p>
 
